# polygon

./: .gitignore  LICENSE  README.md  Test.py  Test_point_in_polygon.py  Test_point_on_line.py  centers.py  examples.ipynb  examples.py  fun_poly.m  polygon.py  requirements.txt  setup.cfg  test.m  test_SMA.py  test_centermass_revolution.py  test_custom_plot.py  test_manipulate.py
examples/: examples.ipynb  examples.py
polygon_math/: __init__.py  polygon.py
test/: SecondMomentArea.py  centermass_revolution.py  circle_args_kwargs.py  classes.py  plot3d.py  plt_args.py  warning_crosses_symmetry_axis.py
