[metadata]
name = polygon_math
version = 1.3.0
author = Gerrit Nowald
author_email = gerrit.nowald@gmail.com
description = Calculate geometric properties of arbitrary 2D polygons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerritnowald/polygon
project_urls =
    Bug Tracker = https://github.com/gerritnowald/polygon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[console_scripts]
polygon_math = polygon_math:polygon_math